@@ -1,4 +1,5 @@
-/** Copyright (C) 2011 Turn, Inc.
+/**
+ * Copyright (C) 2011-2012 Turn, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -12,7 +13,6 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package com.turn.ttorrent.common;
 
 import com.turn.ttorrent.bcodec.BDecoder;
@@ -27,17 +27,21 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.math.BigInteger;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.ByteBuffer;
 import java.nio.channels.FileChannel;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.TreeMap;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutionException;
@@ -52,7 +56,8 @@ import org.apache.log4j.PatternLayout;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-/** A torrent file tracked by the controller's BitTorrent tracker.
+/**
+ * A torrent file tracked by the controller's BitTorrent tracker.
  *
  * <p>
  * This class represents an active torrent on the tracker. The torrent
@@ -106,7 +111,10 @@ public class Torrent {
 	private final byte[] info_hash;
 	private final String hex_info_hash;
 
-	private final String announceUrl;
+	private final List<List<URI>> trackers;
+	private final Set<URI> allTrackers;
+	private final Date creationDate;
+	private final String comment;
 	private final String createdBy;
 	private final String name;
 	private final long size;
@@ -114,15 +122,16 @@ public class Torrent {
 
 	private final boolean seeder;
 
-	/** Create a new torrent from metainfo binary data.
+	/**
+	 * Create a new torrent from meta-info binary data.
 	 *
-	 * Parses the metainfo data (which should be B-encoded as described in the
+	 * Parses the meta-info data (which should be B-encoded as described in the
 	 * BitTorrent specification) and create a Torrent object from it.
 	 *
-	 * @param torrent The metainfo byte data.
+	 * @param torrent The meta-info byte data.
 	 * @param parent The parent directory or location of the torrent files.
 	 * @param seeder Whether we'll be seeding for this torrent or not.
-	 * @throws IOException When the info dictionnary can't be read or
+	 * @throws IOException When the info dictionary can't be read or
 	 * encoded and hashed back to create the torrent's SHA-1 hash.
 	 * @throws NoSuchAlgorithmException If the SHA-1 algorithm is not
 	 * available.
@@ -142,7 +151,66 @@ public class Torrent {
 		this.info_hash = Torrent.hash(this.encoded_info);
 		this.hex_info_hash = Torrent.byteArrayToHexString(this.info_hash);
 
-		this.announceUrl = this.decoded.get("announce").getString();
+		/**
+		 * Parses the announce information from the decoded meta-info
+		 * structure.
+		 *
+		 * <p>
+		 * If the torrent doesn't define an announce-list, use the mandatory
+		 * announce field value as the single tracker in a single announce
+		 * tier.  Otherwise, the announce-list must be parsed and the trackers
+		 * from each tier extracted.
+		 * </p>
+		 *
+		 * @see <a href="http://bittorrent.org/beps/bep_0012.html">BitTorrent BEP#0012 "Multitracker Metadata Extension"</a>
+		 */
+		try {
+			this.trackers = new ArrayList<List<URI>>();
+			this.allTrackers = new HashSet<URI>();
+
+			if (!this.decoded.containsKey("announce-list")) {
+				URI tracker = new URI(this.decoded.get("announce").getString());
+				this.allTrackers.add(tracker);
+
+				// Build a single-tier announce list.
+				List<URI> tier = new ArrayList<URI>();
+				tier.add(tracker);
+				this.trackers.add(tier);
+			} else {
+				List<BEValue> tiers = this.decoded.get("announce-list").getList();
+				for (BEValue tv : tiers) {
+					List<BEValue> trackers = tv.getList();
+					if (trackers.isEmpty()) {
+						continue;
+					}
+
+					List<URI> tier = new ArrayList<URI>();
+					for (BEValue tracker : trackers) {
+						URI uri = new URI(tracker.getString());
+
+						// Make sure we're not adding duplicate trackers.
+						if (!this.allTrackers.contains(uri)) {
+							tier.add(uri);
+							this.allTrackers.add(uri);
+						}
+					}
+
+					// Only add the tier if it's not empty.
+					if (!tier.isEmpty()) {
+						this.trackers.add(tier);
+					}
+				}
+			}
+		} catch (URISyntaxException use) {
+			throw new IOException(use);
+		}
+
+		this.creationDate = this.decoded.containsKey("creation date")
+			? new Date(this.decoded.get("creation date").getLong() * 1000)
+			: null;
+		this.comment = this.decoded.containsKey("comment")
+			? this.decoded.get("comment").getString()
+			: null;
 		this.createdBy = this.decoded.containsKey("created by")
 			? this.decoded.get("created by").getString()
 			: null;
@@ -181,7 +249,22 @@ public class Torrent {
 		logger.info("{}-file torrent information:",
 			this.isMultifile() ? "Multi" : "Single");
 		logger.info("  Torrent name: {}", this.name);
-		logger.info("  Announced at: {}", this.announceUrl);
+		logger.info("  Announced at:");
+		for (int i=0; i < this.trackers.size(); i++) {
+			List<URI> tier = this.trackers.get(i);
+			for (int j=0; j < tier.size(); j++) {
+				logger.info("    {}{}",
+					(j == 0 ? String.format("%2d. ", i+1) : "    "),
+					tier.get(j));
+			}
+		}
+
+		if (this.creationDate != null) {
+			logger.info("  Created on..: {}", this.creationDate);
+		}
+		if (this.comment != null) {
+			logger.info("  Comment.....: {}", this.comment);
+		}
 		if (this.createdBy != null) {
 			logger.info("  Created by..: {}", this.createdBy);
 		}
@@ -191,41 +274,55 @@ public class Torrent {
 				this.files.size());
 			int i = 0;
 			for (TorrentFile file : this.files) {
-				logger.debug("  {}. {} ({} byte(s))",
+				logger.debug("    {}. {} ({} byte(s))",
 					new Object[] {
 						String.format("%2d", ++i),
 						file.file.getPath(),
-						file.size
+						String.format("%,d", file.size)
 					});
 			}
 		}
 
-		logger.info("  Total size: {} byte(s)", this.size);
+		logger.info("  Total size..: {} byte(s)",
+			String.format("%,d", this.size));
 	}
 
-	/** Get this torrent's name.
+	/**
+	 * Get this torrent's name.
 	 *
+	 * <p>
 	 * For a single-file torrent, this is usually the name of the file. For a
 	 * multi-file torrent, this is usually the name of a top-level directory
 	 * containing those files.
+	 * </p>
 	 */
 	public String getName() {
 		return this.name;
 	}
 
-	/** Get this torrent's creator (user, software, whatever...).
+	/**
+	 * Get this torrent's comment string.
+	 */
+	public String getComment() {
+		return this.comment;
+	}
+
+	/**
+	 * Get this torrent's creator (user, software, whatever...).
 	 */
 	public String getCreatedBy() {
 		return this.createdBy;
 	}
 
-	/** Get the total size of this torrent.
+	/**
+	 * Get the total size of this torrent.
 	 */
 	public long getSize() {
 		return this.size;
 	}
 
-	/** Get the file names from this torrent.
+	/**
+	 * Get the file names from this torrent.
 	 *
 	 * @return The list of relative filenames of all the files described in
 	 * this torrent.
@@ -238,51 +335,68 @@ public class Torrent {
 		return filenames;
 	}
 
-	/** Tells whether this torrent is multi-file or not.
+	/**
+	 * Tells whether this torrent is multi-file or not.
 	 */
 	public boolean isMultifile() {
 		return this.files.size() > 1;
 	}
 
-	/** Return the hash of the B-encoded meta-info structure of this torrent.
+	/**
+	 * Return the hash of the B-encoded meta-info structure of this torrent.
 	 */
 	public byte[] getInfoHash() {
 		return this.info_hash;
 	}
 
-	/** Get this torrent's info hash (as an hexadecimal-coded string).
+	/**
+	 * Get this torrent's info hash (as an hexadecimal-coded string).
 	 */
 	public String getHexInfoHash() {
 		return this.hex_info_hash;
 	}
 
-	/** Return a human-readable representation of this torrent object.
+	/**
+	 * Return a human-readable representation of this torrent object.
 	 *
+	 * <p>
 	 * The torrent's name is used.
+	 * </p>
 	 */
 	public String toString() {
 		return this.getName();
 	}
 
-	/** Return the B-encoded meta-info of this torrent.
+	/**
+	 * Return the B-encoded meta-info of this torrent.
 	 */
 	public byte[] getEncoded() {
 		return this.encoded;
 	}
 
-	/** Return the announce URL used by this torrent.
+	/**
+	 * Return the trackers for this torrent.
 	 */
-	public String getAnnounceUrl() {
-		return this.announceUrl;
+	public List<List<URI>> getAnnounceList() {
+		return this.trackers;
 	}
 
-	/** Tells whether we were an initial seeder for this torrent.
+	/**
+	 * Returns the number of trackers for this torrent.
+	 */
+	public int getTrackerCount() {
+		return this.allTrackers.size();
+	}
+
+	/**
+	 * Tells whether we were an initial seeder for this torrent.
 	 */
 	public boolean isSeeder() {
 		return this.seeder;
 	}
 
-	/** Save this torrent meta-info structure into a .torrent file.
+	/**
+	 * Save this torrent meta-info structure into a .torrent file.
 	 *
 	 * @param output The file to write to.
 	 * @throws IOException If an I/O error occurs while writing the file.
@@ -306,7 +420,8 @@ public class Torrent {
 		return md.digest();
 	}
 
-	/** Convert a byte string to a string containing an hexadecimal
+	/**
+	 * Convert a byte string to a string containing an hexadecimal
 	 * representation of the original data.
 	 *
 	 * @param bytes The byte array to convert.
@@ -316,7 +431,8 @@ public class Torrent {
 		return String.format("%0" + (bytes.length << 1) + "X", bi);
 	}
 
-	/** Return an hexadecimal representation of the bytes contained in the
+	/**
+	 * Return an hexadecimal representation of the bytes contained in the
 	 * given string, following the default, expected byte encoding.
 	 *
 	 * @param input The input string.
@@ -330,7 +446,8 @@ public class Torrent {
 		}
 	}
 
-	/** Determine how many threads to use for the piece hashing.
+	/**
+	 * Determine how many threads to use for the piece hashing.
 	 *
 	 * <p>
 	 * If the environment variable TTORRENT_HASHING_THREADS is set to an
@@ -359,7 +476,8 @@ public class Torrent {
 
 	/** Torrent loading ---------------------------------------------------- */
 
-	/** Load a torrent from the given torrent file.
+	/**
+	 * Load a torrent from the given torrent file.
 	 *
 	 * <p>
 	 * This method assumes we are not a seeder and that local data needs to be
@@ -377,7 +495,8 @@ public class Torrent {
 		return Torrent.load(torrent, parent, false);
 	}
 
-	/** Load a torrent from the given torrent file.
+	/**
+	 * Load a torrent from the given torrent file.
 	 *
 	 * @param torrent The abstract {@link File} object representing the
 	 * <tt>.torrent</tt> file to load.
@@ -404,7 +523,8 @@ public class Torrent {
 
 	/** Torrent creation --------------------------------------------------- */
 
-	/** Create a {@link Torrent} object for a file.
+	/**
+	 * Create a {@link Torrent} object for a file.
 	 *
 	 * <p>
 	 * Hash the given file to create the {@link Torrent} object representing
@@ -413,20 +533,21 @@ public class Torrent {
 	 * </p>
 	 *
 	 * @param source The file to use in the torrent.
-	 * @param announce The announce URL that will be used for this torrent.
+	 * @param announce The announce URI that will be used for this torrent.
 	 * @param createdBy The creator's name, or any string identifying the
 	 * torrent's creator.
 	 */
-	public static Torrent create(File source, URL announce, String createdBy)
+	public static Torrent create(File source, URI announce, String createdBy)
 		throws NoSuchAlgorithmException, InterruptedException, IOException {
 		return Torrent.create(source, null, announce, createdBy);
 	}
 
-	/** Create a {@link Torrent} object for a set of files.
+	/**
+	 * Create a {@link Torrent} object for a set of files.
 	 *
 	 * <p>
 	 * Hash the given files to create the multi-file {@link Torrent} object
-	 * representing the Torrent metainfo about them, needed for announcing
+	 * representing the Torrent meta-info about them, needed for announcing
 	 * and/or sharing these files. Since we created the torrent, we're
 	 * considering we'll be a full initial seeder for it.
 	 * </p>
@@ -434,13 +555,13 @@ public class Torrent {
 	 * @param parent The parent directory or location of the torrent files,
 	 * also used as the torrent's name.
 	 * @param files The files to add into this torrent.
-	 * @param announce The announce URL that will be used for this torrent.
+	 * @param announce The announce URI that will be used for this torrent.
 	 * @param createdBy The creator's name, or any string identifying the
 	 * torrent's creator.
 	 */
-	public static Torrent create(File parent, List<File> files, URL announce,
-		String createdBy)
-		throws NoSuchAlgorithmException, InterruptedException, IOException {
+	public static Torrent create(File parent, List<File> files, URI announce,
+		String createdBy) throws NoSuchAlgorithmException,
+		   InterruptedException, IOException {
 		if (files == null || files.isEmpty()) {
 			logger.info("Creating single-file torrent for {}...",
 				parent.getName());
@@ -492,7 +613,8 @@ public class Torrent {
 		return new Torrent(baos.toByteArray(), null, true);
 	}
 
-	/** A {@link Callable} to hash a data chunk.
+	/**
+	 * A {@link Callable} to hash a data chunk.
 	 *
 	 * @author mpetazzoni
 	 */
@@ -520,7 +642,8 @@ public class Torrent {
 		}
 	}
 
-	/** Return the concatenation of the SHA-1 hashes of a file's pieces.
+	/**
+	 * Return the concatenation of the SHA-1 hashes of a file's pieces.
 	 *
 	 * <p>
 	 * Hashes the given file piece by piece using the default Torrent piece
@@ -607,7 +730,8 @@ public class Torrent {
 		return hashes.toString();
 	}
 
-	/** Torrent reader and creator.
+	/**
+	 * Torrent reader and creator.
 	 *
 	 * <p>
 	 * You can use the {@code main()} function of this {@link Torrent} class to
@@ -639,7 +763,7 @@ public class Torrent {
 				System.exit(0);
 			}
 
-			URL announce = new URL(args[1]);
+			URI announce = new URI(args[1]);
 			File source = new File(args[2]);
 			if (!source.exists() || !source.canRead()) {
 				throw new IllegalArgumentException(
